[gd_scene load_steps=7 format=3 uid="uid://vs4er432h10o"]

[ext_resource type="Texture2D" uid="uid://vvyaypn3cyfn" path="res://assets/art/furniture_free pack.png" id="1_loud4"]
[ext_resource type="Script" path="res://scenes/furniture_bed.gd" id="1_nj5l1"]
[ext_resource type="Texture2D" uid="uid://cq7paq0d08jgd" path="res://assets/art/furniture_fixed.png" id="3_htsmy"]
[ext_resource type="Texture2D" uid="uid://0kticbjahyhe" path="res://assets/art/furniture_broken.png" id="4_sio2h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_drjvf"]
size = Vector2(32, 88)

[sub_resource type="SpriteFrames" id="SpriteFrames_0gi6a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_sio2h")
}, {
"duration": 1.0,
"texture": ExtResource("3_htsmy")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="furniture_bed" type="Node2D"]

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource("1_nj5l1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 4)
scale = Vector2(1.2, 1.2)
shape = SubResource("RectangleShape2D_drjvf")

[node name="furniture_bed_sprite" type="Sprite2D" parent="Area2D"]
visible = false
texture = ExtResource("1_loud4")
hframes = 7
vframes = 2

[node name="furniture_fixed" type="Sprite2D" parent="Area2D"]
visible = false
scale = Vector2(0.15, 0.15)
texture = ExtResource("3_htsmy")

[node name="furniture_broken" type="Sprite2D" parent="Area2D"]
visible = false
scale = Vector2(0.15, 0.15)
texture = ExtResource("4_sio2h")

[node name="furniture" type="AnimatedSprite2D" parent="Area2D"]
scale = Vector2(0.15, 0.15)
sprite_frames = SubResource("SpriteFrames_0gi6a")

[connection signal="area_entered" from="Area2D" to="Area2D" method="_on_area_entered"]
[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered"]
[connection signal="mouse_entered" from="Area2D" to="Area2D" method="_on_mouse_entered"]
